--- a/bank/Makefile
+++ b/bank/Makefile
@@ -1,9 +1,9 @@
-all: dep-wd-race dep-wd-ok transfer-bad 
+all: dep-wd-race dep-wd-ok transfer-bad transfer-good
 
 .PHONY: clean all		#declare these targets as phony
 
 clean:
-	rm -f *.o *.exe *stackdump dep-wd-race dep-wd-ok transfer-bad 
+	rm -f *.o *.exe *stackdump dep-wd-race dep-wd-ok transfer-bad transfer-good
 
 CFLAGS=-g -O1 -fno-ipa-sra -L../lib -I../h
 
@@ -12,3 +12,4 @@ CFLAGS=-g -O1 -fno-ipa-sra -L../lib -I../h
 dep-wd-race: dep-wd-race.o ../lib/tthreads.a
 dep-wd-ok:  dep-wd-ok.o ../lib/tthreads.a
 transfer-bad:  transfer-bad.o ../lib/tthreads.a
+transfer-good: transfer-good.o ../lib/tthreads.a
